// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[PAGE] 404 Page should render 1`] = `
<header class="sticky top-0 z-10 dark:bg-zinc-900/15 border-b shadow-xl backdrop-blur-md bg-white/10 border-t-0 dark:border-white/15 border-white/80 rounded-bl-xl rounded-br-xl">
  <div class="py-4 px-6 flex items-center justify-between">
    <div class="flex items-center">
      <a href="https://www.x.com/paulogoncalvs"
         aria-label="X (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link mx-2 sm:mx-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
    <div class="flex justify-end">
      <label for="sd-tog"
             class="icon-link"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
  </div>
</header>
<aside>
  <input class="peer sr-only"
         type="checkbox"
         id="sd-tog"
         aria-label="Toggle side drawer"
  >
  <div class="dark:bg-zinc-900/30 border-b rounded-tl-xl rounded-bl-xl shadow-xl backdrop-blur-md bg-white/30 border-l dark:border-white/10 border-white/50 top-0 right-0 w-[65vw] sm:w-[55vw] md:w-[45vw] lg:w-[35vw] fixed h-full z-40 ease-in-out duration-300 flex flex-col overflow-y-auto translate-x-full peer-checked:translate-x-0 transition-transform">
    <div class="flex p-4 sm:px-8 items-center justify-between">
      <div class="flex items-center gap-4">
        <select class="w-[50px]"
                id="language-selector"
                aria-label="Language selection"
        >
          <option value="en">
            EN
          </option>
          <option value="pt">
            PT
          </option>
        </select>
        <button class="icon-link sup-novar p-2"
                aria-label="Toggle to dark mode"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="24"
               height="24"
          >
            <use href="#">
            </use>
          </svg>
        </button>
      </div>
      <label for="sd-tog"
             class="icon-link ml-auto"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
    <div class="flex flex-col p-4 sm:p-8">
      <a class="interactive interactive-md"
         href="/undefined/"
      >
        <span>
          Homepage
        </span>
      </a>
      <a class="interactive interactive-md mt-4"
         href="/undefined/contact/"
      >
        <span>
          Contact
        </span>
      </a>
    </div>
    <div class="flex px-4 sm:px-8 pb-4 mx-auto mt-auto">
      <a href="https://www.x.com/paulogoncalvs"
         aria-label="X (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link mx-2 sm:mx-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
  </div>
</aside>
<main>
  <div class="p-6 pt-20 pb-20 flex flex-col items-center text-center">
    <div class="p-6 flex flex-col items-center">
      <h1 class="op-low animate-fade-in-down text-3xl tracking-tight font-bold sm:my-2 sm:text-5xl"
          style="--delay:0.1s;"
      >
        Oops!
      </h1>
      <h1 class="op-low animate-fade-in-down text-xl lowercase sm:text-2xl pb-14"
          style="--delay:0.2s;"
      >
        Page not found
      </h1>
    </div>
    <div class="op-low animate-fade-in-up flex flex-col items-center pb-14"
         style="--delay:0.4s;"
    >
      <a class="interactive interactive-lg"
         href="/undefined/"
      >
        <span>
          Go to homepage
        </span>
      </a>
    </div>
  </div>
</main>
<footer>
  <div class="text-center bg-white/20 dark:bg-zinc-900/35 shadow-xs shadow-black/5 border dark:border-white/15 border-white/80 border-l-0 border-r-0 p-6">
    <div class="flex flex-col items-center pt-10 pb-8">
      <p class="text-sm font-bold pb-4">
        Website Technology Stack:
      </p>
      <div class="flex flex-wrap justify-center align-middle">
        <a href="https://www.typescriptlang.org/"
           aria-label="TypeScript (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://preactjs.com/"
           aria-label="Preact (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://webpack.js.org/"
           aria-label="Webpack (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://pnpm.io/"
           aria-label="pnpm (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://eslint.org/"
           aria-label="ESLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://stylelint.io/"
           aria-label="StyleLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://developers.google.com/web/tools/workbox"
           aria-label="Workbox (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://esbuild.github.io/"
           aria-label="esbuilld (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://analytics.google.com/"
           aria-label="Google Analytics (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="28"
               height="28"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://tailwindcss.com/"
           aria-label="Tailwind CSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://playwright.dev/"
           aria-label="Playwright (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://jestjs.io/"
           aria-label="Jest (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://prettier.io/"
           aria-label="Prettier (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://postcss.org/"
           aria-label="PostCSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://www.deque.com/axe/"
           aria-label="Axe (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
      </div>
      <p class="text-xs pt-4">
        The full source code is available on
        <a href="https://github.com/paulogoncalvs/pg-web"
           target="_blank"
           rel="noopener noreferrer"
           class="underline"
        >
          GitHub
        </a>
        .
      </p>
    </div>
  </div>
  <div class="p-6 flex flex-col items-center py-20 text-xs text-center">
    <p class="mb-2">
      This site is protected by reCAPTCHA and the Google
      <a class="underline"
         target="_blank"
         rel="noopener noreferrer"
         href="https://policies.google.com/privacy"
      >
        Privacy Policy
      </a>
      and
      <a class="underline"
         target="_blank"
         rel="noopener noreferrer"
         href="https://policies.google.com/terms"
      >
        Terms of Service
      </a>
      apply.
    </p>
    <p class="pt-2 font-bold">
      paulogoncalves.dev © 2021 - 2026
    </p>
  </div>
</footer>
<div class="fixed overflow-hidden z-10 dark:bg-zinc-900/60 bg-white/40 inset-0 transform ease-in-out duration-700 opacity-0 hidden transition-transform"
     aria-hidden="false"
>
</div>
`;

exports[`[PAGE] Contact Page should render 1`] = `
<header class="sticky top-0 z-10 dark:bg-zinc-900/15 border-b shadow-xl backdrop-blur-md bg-white/10 border-t-0 dark:border-white/15 border-white/80 rounded-bl-xl rounded-br-xl">
  <div class="py-4 px-6 flex items-center justify-between">
    <div class="flex items-center">
      <a href="https://www.x.com/paulogoncalvs"
         aria-label="X (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link mx-2 sm:mx-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
    <div class="flex justify-end">
      <label for="sd-tog"
             class="icon-link"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
  </div>
</header>
<aside>
  <input class="peer sr-only"
         type="checkbox"
         id="sd-tog"
         aria-label="Toggle side drawer"
  >
  <div class="dark:bg-zinc-900/30 border-b rounded-tl-xl rounded-bl-xl shadow-xl backdrop-blur-md bg-white/30 border-l dark:border-white/10 border-white/50 top-0 right-0 w-[65vw] sm:w-[55vw] md:w-[45vw] lg:w-[35vw] fixed h-full z-40 ease-in-out duration-300 flex flex-col overflow-y-auto translate-x-full peer-checked:translate-x-0 transition-transform">
    <div class="flex p-4 sm:px-8 items-center justify-between">
      <div class="flex items-center gap-4">
        <select class="w-[50px]"
                id="language-selector"
                aria-label="Language selection"
        >
          <option value="en">
            EN
          </option>
          <option value="pt">
            PT
          </option>
        </select>
        <button class="icon-link sup-novar p-2"
                aria-label="Toggle to dark mode"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="24"
               height="24"
          >
            <use href="#">
            </use>
          </svg>
        </button>
      </div>
      <label for="sd-tog"
             class="icon-link ml-auto"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
    <div class="flex flex-col p-4 sm:p-8">
      <a class="interactive interactive-md"
         href="/undefined/"
      >
        <span>
          Homepage
        </span>
      </a>
      <a class="interactive interactive-md mt-4"
         href="/undefined/contact/"
      >
        <span>
          Contact
        </span>
      </a>
    </div>
    <div class="flex px-4 sm:px-8 pb-4 mx-auto mt-auto">
      <a href="https://www.x.com/paulogoncalvs"
         aria-label="X (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link mx-2 sm:mx-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
  </div>
</aside>
<main>
  <div class="p-6 pt-20 flex flex-col items-center text-center">
    <h1 class="op-low animate-fade-in-down text-3xl tracking-tight font-bold sm:my-2 sm:text-5xl"
        style="--delay:0.1s;"
    >
      Contact
    </h1>
    <h1 class="op-low animate-fade-in-down text-xl lowercase op-1 sm:text-2xl pb-8"
        style="--delay:0.2s;"
    >
      send me a message
    </h1>
  </div>
  <div class="p-6 flex flex-col items-center pb-20">
    <form class="w-full max-w-[400px]"
          novalidate
    >
      <h2 class="op-low animate-fade-in-down font-bold text-xl sm:text-2xl pb-8"
          style="--delay:0.30000000000000004s;"
      >
        By form:
      </h2>
      <div class="op-low animate-fade-in-down "
           style="--delay:0.32000000000000006s;"
      >
        <div class="form-field mt-3">
          <label class="form-label"
                 for="firstName"
          >
            First name
          </label>
          <input class="form-input "
                 id="firstName"
                 type="text"
                 name="firstName"
                 value
                 autocomplete="given-name"
          >
        </div>
      </div>
      <div class="op-low animate-fade-in-down "
           style="--delay:0.34s;"
      >
        <div class="form-field mt-3">
          <label class="form-label"
                 for="lastName"
          >
            Last name
          </label>
          <input class="form-input "
                 id="lastName"
                 type="text"
                 name="lastName"
                 value
                 autocomplete="family-name"
          >
        </div>
      </div>
      <div class="op-low animate-fade-in-down "
           style="--delay:0.36000000000000004s;"
      >
        <div class="form-field mt-3">
          <label class="form-label"
                 for="email"
          >
            E-mail
          </label>
          <input class="form-input "
                 id="email"
                 type="email"
                 name="email"
                 value
                 autocomplete="email"
          >
        </div>
      </div>
      <div class="op-low animate-fade-in-down "
           style="--delay:0.38s;"
      >
        <div class="form-field mt-3">
          <label class="form-label"
                 for="message"
          >
            Message
          </label>
          <textarea class="form-input "
                    id="message"
                    name="message"
                    rows="4"
                    autocomplete="off"
          >
          </textarea>
        </div>
      </div>
      <div class="form-field mt-3 hidden">
        <label class="form-label"
               for="company"
        >
          Message
        </label>
        <input class="form-input "
               id="company"
               type="text"
               name="company"
               value
               autocomplete="off"
        >
      </div>
      <div class="op-low animate-fade-in-down "
           style="--delay:0.4s;"
      >
        <button class="btn interactive interactive-icon interactive-md mt-4">
          <svg aria-hidden="true"
               class="fill-current"
               width="24"
               height="24"
          >
            <use href="#">
            </use>
          </svg>
          Send message
        </button>
      </div>
    </form>
  </div>
  <div class="p-6 flex flex-col items-center pb-20">
    <div class="op-low animate-fade-in-up w-full max-w-[400px]"
         style="--delay:0.6000000000000001s;"
    >
      <h2 class="op-low animate-fade-in-down font-bold text-xl op-1 sm:text-2xl pb-8"
          style="--delay:0.5s;"
      >
        By e-mail:
      </h2>
      <a href="mailto:contact@paulogoncalves.dev"
         class="interactive interactive-icon interactive-md"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
        <span>
          Send e-mail
        </span>
      </a>
    </div>
  </div>
</main>
<footer>
  <div class="text-center bg-white/20 dark:bg-zinc-900/35 shadow-xs shadow-black/5 border dark:border-white/15 border-white/80 border-l-0 border-r-0 p-6">
    <div class="flex flex-col items-center pt-10 pb-8">
      <p class="text-sm font-bold pb-4">
        Website Technology Stack:
      </p>
      <div class="flex flex-wrap justify-center align-middle">
        <a href="https://www.typescriptlang.org/"
           aria-label="TypeScript (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://preactjs.com/"
           aria-label="Preact (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://webpack.js.org/"
           aria-label="Webpack (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://pnpm.io/"
           aria-label="pnpm (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://eslint.org/"
           aria-label="ESLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://stylelint.io/"
           aria-label="StyleLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://developers.google.com/web/tools/workbox"
           aria-label="Workbox (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://esbuild.github.io/"
           aria-label="esbuilld (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://analytics.google.com/"
           aria-label="Google Analytics (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="28"
               height="28"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://tailwindcss.com/"
           aria-label="Tailwind CSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://playwright.dev/"
           aria-label="Playwright (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://jestjs.io/"
           aria-label="Jest (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://prettier.io/"
           aria-label="Prettier (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://postcss.org/"
           aria-label="PostCSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://www.deque.com/axe/"
           aria-label="Axe (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
      </div>
      <p class="text-xs pt-4">
        The full source code is available on
        <a href="https://github.com/paulogoncalvs/pg-web"
           target="_blank"
           rel="noopener noreferrer"
           class="underline"
        >
          GitHub
        </a>
        .
      </p>
    </div>
  </div>
  <div class="p-6 flex flex-col items-center py-20 text-xs text-center">
    <p class="mb-2">
      This site is protected by reCAPTCHA and the Google
      <a class="underline"
         target="_blank"
         rel="noopener noreferrer"
         href="https://policies.google.com/privacy"
      >
        Privacy Policy
      </a>
      and
      <a class="underline"
         target="_blank"
         rel="noopener noreferrer"
         href="https://policies.google.com/terms"
      >
        Terms of Service
      </a>
      apply.
    </p>
    <p class="pt-2 font-bold">
      paulogoncalves.dev © 2021 - 2026
    </p>
  </div>
</footer>
<div class="fixed overflow-hidden z-10 dark:bg-zinc-900/60 bg-white/40 inset-0 transform ease-in-out duration-700 opacity-0 hidden transition-transform"
     aria-hidden="false"
>
</div>
`;

exports[`[PAGE] Home Page should render 1`] = `
<header class="sticky top-0 z-10 dark:bg-zinc-900/15 border-b shadow-xl backdrop-blur-md bg-white/10 border-t-0 dark:border-white/15 border-white/80 rounded-bl-xl rounded-br-xl">
  <div class="py-4 px-6 flex items-center justify-between">
    <div class="flex items-center">
      <a href="https://www.x.com/paulogoncalvs"
         aria-label="X (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link mx-2 sm:mx-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
    <div class="flex justify-end">
      <label for="sd-tog"
             class="icon-link"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
  </div>
</header>
<aside>
  <input class="peer sr-only"
         type="checkbox"
         id="sd-tog"
         aria-label="Toggle side drawer"
  >
  <div class="dark:bg-zinc-900/30 border-b rounded-tl-xl rounded-bl-xl shadow-xl backdrop-blur-md bg-white/30 border-l dark:border-white/10 border-white/50 top-0 right-0 w-[65vw] sm:w-[55vw] md:w-[45vw] lg:w-[35vw] fixed h-full z-40 ease-in-out duration-300 flex flex-col overflow-y-auto translate-x-full peer-checked:translate-x-0 transition-transform">
    <div class="flex p-4 sm:px-8 items-center justify-between">
      <div class="flex items-center gap-4">
        <select class="w-[50px]"
                id="language-selector"
                aria-label="Language selection"
        >
          <option value="en">
            EN
          </option>
          <option value="pt">
            PT
          </option>
        </select>
        <button class="icon-link sup-novar p-2"
                aria-label="Toggle to dark mode"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="24"
               height="24"
          >
            <use href="#">
            </use>
          </svg>
        </button>
      </div>
      <label for="sd-tog"
             class="icon-link ml-auto"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
    <div class="flex flex-col p-4 sm:p-8">
      <a aria-current="page"
         class="interactive interactive-md"
         href="/undefined/"
      >
        <span>
          Homepage
        </span>
      </a>
      <a class="interactive interactive-md mt-4"
         href="/undefined/contact/"
      >
        <span>
          Contact
        </span>
      </a>
    </div>
    <div class="flex px-4 sm:px-8 pb-4 mx-auto mt-auto">
      <a href="https://www.x.com/paulogoncalvs"
         aria-label="X (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link mx-2 sm:mx-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
  </div>
</aside>
<main>
  <section class="px-6 py-20 flex flex-col items-center">
    <h1 class="op-low animate-fade-in-down text-3xl sm:text-5xl font-bold tracking-tight text-center sm:my-2"
        style="--delay:0.1s;"
    >
      PAULO GONÇALVES
    </h1>
    <h1 class="op-low animate-fade-in-down text-xl sm:text-2xl lowercase text-center"
        style="--delay:0.2s;"
    >
      Front-End Engineer
    </h1>
    <div class="flex flex-col items-center sm:flex-row pt-14 space-y-8 sm:space-y-0">
      <div class="op-low animate-fade-in-down shrink-0"
           style="--delay:0.30000000000000004s;"
      >
        <img alt="portrait of Paulo Gonçalves"
             width="200"
             height="200"
             src="test-file-stub"
             srcset="test-file-stub 2x"
             loading="eager"
             decoding="async"
             fetchpriority="high"
             class="transition-all duration-500 ease-out opacity-60 rounded-full shadow-[inset_0_1px_0_rgba(255,255,255,0.75),0_0_9px_rgba(0,0,0,0.2),0_3px_8px_rgba(0,0,0,0.15)] bg-white/30 border border-white/20"
        >
      </div>
      <div class="op-low animate-fade-in-down max-w-xs sm:max-w-md sm:pl-14 text-sm sm:text-base"
           style="--delay:0.4s;"
      >
        <p>
          Native of Vila Nova de Gaia, Porto district, Portugal.
        </p>
        <p class>
          Currently working as a
          <strong>
            Principal Front-End Engineer
          </strong>
          at
          <strong>
            Porto Tech Center - Jumia
          </strong>
          , where I architect and develop large-scale, high-performance web applications using modern front-end frameworks and tooling.
        </p>
      </div>
    </div>
    <div class="op-low animate-fade-in-up "
         style="--delay:0.6000000000000001s;"
    >
      <a class="interactive interactive-icon sm:interactive-lg interactive-md mt-14"
         href="/undefined/contact/"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
        <span>
          Contact me
        </span>
      </a>
    </div>
  </section>
  <section class="px-6 py-14 pb-20 flex flex-col items-center text-center bg-white/20 dark:bg-zinc-900/15 shadow-xs shadow-black/5 border-t dark:border-white/15 border-white/80">
    <div class="text-left max-w-xs sm:max-w-xl w-full">
      <h2 class="op-low animate-fade-in-down text-xl sm:text-2xl mb-12 font-bold"
          style="--delay:0.9s;"
      >
        Professional Experience
      </h2>
      <div class="op-low animate-fade-in-down relative border-l-2 border-stone-300 dark:border-white/10 ml-3 space-y-8"
           style="--delay:0.9s;"
      >
        <div class="op-low animate-fade-in-up "
             style="--delay:1s;"
        >
          <div class="relative pl-8">
            <span class="absolute -left-2.25 top-1 w-4 h-4 rounded-full border-2 bg-black dark:bg-white border-black/20 dark:border-white/20">
            </span>
            <h3 class="font-semibold text-zinc-900 dark:text-white">
              Principal Front-End Engineer
            </h3>
            <p class="text-stone-700 dark:text-zinc-300 text-sm">
              Jumia Porto Tech Center
            </p>
            <p class="text-stone-500 dark:text-zinc-400 text-xs mt-1">
              10/2022 – Present · 3 years 4 months
            </p>
          </div>
        </div>
        <div class="op-low animate-fade-in-up "
             style="--delay:1.07s;"
        >
          <div class="relative pl-8">
            <span class="absolute -left-2.25 top-1 w-4 h-4 rounded-full border-2 bg-stone-100 dark:bg-zinc-700 border-stone-300 dark:border-white/10">
            </span>
            <h3 class="font-semibold text-zinc-900 dark:text-white">
              Engineering Manager / Lead Front-End Engineer
            </h3>
            <p class="text-stone-700 dark:text-zinc-300 text-sm">
              Jumia Porto Tech Center
            </p>
            <p class="text-stone-500 dark:text-zinc-400 text-xs mt-1">
              04/2021 – 09/2022 · 1 year 6 months
            </p>
          </div>
        </div>
        <div class="op-low animate-fade-in-up "
             style="--delay:1.1400000000000001s;"
        >
          <div class="relative pl-8">
            <span class="absolute -left-2.25 top-1 w-4 h-4 rounded-full border-2 bg-stone-100 dark:bg-zinc-700 border-stone-300 dark:border-white/10">
            </span>
            <h3 class="font-semibold text-zinc-900 dark:text-white">
              Lead Front-End Engineer
            </h3>
            <p class="text-stone-700 dark:text-zinc-300 text-sm">
              Jumia Porto Tech Center
            </p>
            <p class="text-stone-500 dark:text-zinc-400 text-xs mt-1">
              10/2019 – 03/2021 · 1 year 6 months
            </p>
          </div>
        </div>
        <div class="op-low animate-fade-in-up "
             style="--delay:1.21s;"
        >
          <div class="relative pl-8">
            <span class="absolute -left-2.25 top-1 w-4 h-4 rounded-full border-2 bg-stone-100 dark:bg-zinc-700 border-stone-300 dark:border-white/10">
            </span>
            <h3 class="font-semibold text-zinc-900 dark:text-white">
              Senior Front-End Engineer
            </h3>
            <p class="text-stone-700 dark:text-zinc-300 text-sm">
              Jumia Porto Tech Center
            </p>
            <p class="text-stone-500 dark:text-zinc-400 text-xs mt-1">
              04/2018 – 09/2019 · 1 year 6 months
            </p>
          </div>
        </div>
        <div class="op-low animate-fade-in-up "
             style="--delay:1.2800000000000002s;"
        >
          <div class="relative pl-8">
            <span class="absolute -left-2.25 top-1 w-4 h-4 rounded-full border-2 bg-stone-100 dark:bg-zinc-700 border-stone-300 dark:border-white/10">
            </span>
            <h3 class="font-semibold text-zinc-900 dark:text-white">
              Senior Front-End Developer
            </h3>
            <p class="text-stone-700 dark:text-zinc-300 text-sm">
              Rocket Internet GmbH
            </p>
            <p class="text-stone-500 dark:text-zinc-400 text-xs mt-1">
              01/2017 – 03/2018 · 1 year 3 months
            </p>
          </div>
        </div>
        <div class="op-low animate-fade-in-up "
             style="--delay:1.35s;"
        >
          <div class="relative pl-8">
            <span class="absolute -left-2.25 top-1 w-4 h-4 rounded-full border-2 bg-stone-100 dark:bg-zinc-700 border-stone-300 dark:border-white/10">
            </span>
            <h3 class="font-semibold text-zinc-900 dark:text-white">
              Advanced Developer
            </h3>
            <p class="text-stone-700 dark:text-zinc-300 text-sm">
              Rocket Internet GmbH
            </p>
            <p class="text-stone-500 dark:text-zinc-400 text-xs mt-1">
              03/2016 – 12/2016 · 10 months
            </p>
          </div>
        </div>
        <div class="op-low animate-fade-in-up "
             style="--delay:1.42s;"
        >
          <div class="relative pl-8">
            <span class="absolute -left-2.25 top-1 w-4 h-4 rounded-full border-2 bg-stone-100 dark:bg-zinc-700 border-stone-300 dark:border-white/10">
            </span>
            <h3 class="font-semibold text-zinc-900 dark:text-white">
              Multimedia Engineer
            </h3>
            <p class="text-stone-700 dark:text-zinc-300 text-sm">
              Myone - Comunicação Multimédia
            </p>
            <p class="text-stone-500 dark:text-zinc-400 text-xs mt-1">
              01/2015 – 02/2016 · 1 year 2 months
            </p>
          </div>
        </div>
        <div class="op-low animate-fade-in-up "
             style="--delay:1.49s;"
        >
          <div class="relative pl-8">
            <span class="absolute -left-2.25 top-1 w-4 h-4 rounded-full border-2 bg-stone-100 dark:bg-zinc-700 border-stone-300 dark:border-white/10">
            </span>
            <h3 class="font-semibold text-zinc-900 dark:text-white">
              Web Designer | New Media Developer
            </h3>
            <p class="text-stone-700 dark:text-zinc-300 text-sm">
              Medula - Design de Comunicação
            </p>
            <p class="text-stone-500 dark:text-zinc-400 text-xs mt-1">
              03/2014 – 12/2014 · 10 months
            </p>
          </div>
        </div>
      </div>
      <p class="op-low animate-fade-in-down pt-12 text-sm"
         style="--delay:1.1s;"
      >
        For more technical details and experience, please visit my
        <a href="https://pt.linkedin.com/in/paulogoncalvs"
           target="_blank"
           rel="noopener noreferrer"
           class="underline"
        >
          LinkedIn profile
        </a>
        .
      </p>
    </div>
  </section>
</main>
<footer>
  <div class="text-center bg-white/20 dark:bg-zinc-900/35 shadow-xs shadow-black/5 border dark:border-white/15 border-white/80 border-l-0 border-r-0 p-6">
    <div class="flex flex-col items-center pt-10 pb-8">
      <p class="text-sm font-bold pb-4">
        Website Technology Stack:
      </p>
      <div class="flex flex-wrap justify-center align-middle">
        <a href="https://www.typescriptlang.org/"
           aria-label="TypeScript (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://preactjs.com/"
           aria-label="Preact (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://webpack.js.org/"
           aria-label="Webpack (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://pnpm.io/"
           aria-label="pnpm (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://eslint.org/"
           aria-label="ESLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://stylelint.io/"
           aria-label="StyleLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://developers.google.com/web/tools/workbox"
           aria-label="Workbox (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://esbuild.github.io/"
           aria-label="esbuilld (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://analytics.google.com/"
           aria-label="Google Analytics (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="28"
               height="28"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://tailwindcss.com/"
           aria-label="Tailwind CSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://playwright.dev/"
           aria-label="Playwright (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://jestjs.io/"
           aria-label="Jest (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://prettier.io/"
           aria-label="Prettier (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://postcss.org/"
           aria-label="PostCSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://www.deque.com/axe/"
           aria-label="Axe (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
      </div>
      <p class="text-xs pt-4">
        The full source code is available on
        <a href="https://github.com/paulogoncalvs/pg-web"
           target="_blank"
           rel="noopener noreferrer"
           class="underline"
        >
          GitHub
        </a>
        .
      </p>
    </div>
  </div>
  <div class="p-6 flex flex-col items-center py-20 text-xs text-center">
    <p class="mb-2">
      This site is protected by reCAPTCHA and the Google
      <a class="underline"
         target="_blank"
         rel="noopener noreferrer"
         href="https://policies.google.com/privacy"
      >
        Privacy Policy
      </a>
      and
      <a class="underline"
         target="_blank"
         rel="noopener noreferrer"
         href="https://policies.google.com/terms"
      >
        Terms of Service
      </a>
      apply.
    </p>
    <p class="pt-2 font-bold">
      paulogoncalves.dev © 2021 - 2026
    </p>
  </div>
</footer>
<div class="fixed overflow-hidden z-10 dark:bg-zinc-900/60 bg-white/40 inset-0 transform ease-in-out duration-700 opacity-0 hidden transition-transform"
     aria-hidden="false"
>
</div>
`;

exports[`[PAGE] Offline Page should render 1`] = `
<header class="sticky top-0 z-10 dark:bg-zinc-900/15 border-b shadow-xl backdrop-blur-md bg-white/10 border-t-0 dark:border-white/15 border-white/80 rounded-bl-xl rounded-br-xl">
  <div class="py-4 px-6 flex items-center justify-between">
    <div class="flex items-center">
      <a href="https://www.x.com/paulogoncalvs"
         aria-label="X (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link mx-2 sm:mx-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
    <div class="flex justify-end">
      <label for="sd-tog"
             class="icon-link"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
  </div>
</header>
<aside>
  <input class="peer sr-only"
         type="checkbox"
         id="sd-tog"
         aria-label="Toggle side drawer"
  >
  <div class="dark:bg-zinc-900/30 border-b rounded-tl-xl rounded-bl-xl shadow-xl backdrop-blur-md bg-white/30 border-l dark:border-white/10 border-white/50 top-0 right-0 w-[65vw] sm:w-[55vw] md:w-[45vw] lg:w-[35vw] fixed h-full z-40 ease-in-out duration-300 flex flex-col overflow-y-auto translate-x-full peer-checked:translate-x-0 transition-transform">
    <div class="flex p-4 sm:px-8 items-center justify-between">
      <div class="flex items-center gap-4">
        <select class="w-[50px]"
                id="language-selector"
                aria-label="Language selection"
        >
          <option value="en">
            EN
          </option>
          <option value="pt">
            PT
          </option>
        </select>
        <button class="icon-link sup-novar p-2"
                aria-label="Toggle to dark mode"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="24"
               height="24"
          >
            <use href="#">
            </use>
          </svg>
        </button>
      </div>
      <label for="sd-tog"
             class="icon-link ml-auto"
             aria-label="Toggle side drawer"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </label>
    </div>
    <div class="flex flex-col p-4 sm:p-8">
      <a class="interactive interactive-md"
         href="/undefined/"
      >
        <span>
          Homepage
        </span>
      </a>
      <a class="interactive interactive-md mt-4"
         href="/undefined/contact/"
      >
        <span>
          Contact
        </span>
      </a>
    </div>
    <div class="flex px-4 sm:px-8 pb-4 mx-auto mt-auto">
      <a href="https://www.x.com/paulogoncalvs"
         aria-label="X (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://www.github.com/paulogoncalvs"
         aria-label="GitHub (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link mx-2 sm:mx-4"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
      <a href="https://pt.linkedin.com/in/paulogoncalvs"
         aria-label="LinkedIn (opens in a new window)"
         target="_blank"
         rel="noopener noreferrer"
         class="icon-link"
      >
        <svg aria-hidden="true"
             class="fill-current"
             width="24"
             height="24"
        >
          <use href="#">
          </use>
        </svg>
      </a>
    </div>
  </div>
</aside>
<main>
  <div class="p-6 pt-20 pb-20 flex flex-col items-center text-center">
    <div class="p-6 flex flex-col items-center">
      <h1 class="op-low animate-fade-in-down text-3xl tracking-tight font-bold sm:my-2 sm:text-5xl"
          style="--delay:0.1s;"
      >
        Oops!
      </h1>
      <h1 class="op-low animate-fade-in-down text-xl lowercase sm:text-2xl pb-14"
          style="--delay:0.2s;"
      >
        You are currently offline
      </h1>
    </div>
    <div class="op-low animate-fade-in-down "
         style="--delay:0.4s;"
    >
      <p class="text-l pb-20">
        You need an Internet connection.
      </p>
    </div>
    <div class="op-low animate-fade-in-up flex flex-col items-center pb-14"
         style="--delay:0.6000000000000001s;"
    >
      <a class="interactive interactive-lg"
         href="/undefined/"
      >
        <span>
          Go back to homepage
        </span>
      </a>
    </div>
  </div>
</main>
<footer>
  <div class="text-center bg-white/20 dark:bg-zinc-900/35 shadow-xs shadow-black/5 border dark:border-white/15 border-white/80 border-l-0 border-r-0 p-6">
    <div class="flex flex-col items-center pt-10 pb-8">
      <p class="text-sm font-bold pb-4">
        Website Technology Stack:
      </p>
      <div class="flex flex-wrap justify-center align-middle">
        <a href="https://www.typescriptlang.org/"
           aria-label="TypeScript (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://preactjs.com/"
           aria-label="Preact (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://webpack.js.org/"
           aria-label="Webpack (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://pnpm.io/"
           aria-label="pnpm (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://eslint.org/"
           aria-label="ESLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://stylelint.io/"
           aria-label="StyleLint (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://developers.google.com/web/tools/workbox"
           aria-label="Workbox (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://esbuild.github.io/"
           aria-label="esbuilld (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://analytics.google.com/"
           aria-label="Google Analytics (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="28"
               height="28"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://tailwindcss.com/"
           aria-label="Tailwind CSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://playwright.dev/"
           aria-label="Playwright (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://jestjs.io/"
           aria-label="Jest (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://prettier.io/"
           aria-label="Prettier (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://postcss.org/"
           aria-label="PostCSS (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
        <a href="https://www.deque.com/axe/"
           aria-label="Axe (opens in a new window)"
           target="_blank"
           rel="noopener noreferrer"
           class="icon-link translate-up"
        >
          <svg aria-hidden="true"
               class="fill-current"
               width="32"
               height="32"
          >
            <use href="#">
            </use>
          </svg>
        </a>
      </div>
      <p class="text-xs pt-4">
        The full source code is available on
        <a href="https://github.com/paulogoncalvs/pg-web"
           target="_blank"
           rel="noopener noreferrer"
           class="underline"
        >
          GitHub
        </a>
        .
      </p>
    </div>
  </div>
  <div class="p-6 flex flex-col items-center py-20 text-xs text-center">
    <p class="mb-2">
      This site is protected by reCAPTCHA and the Google
      <a class="underline"
         target="_blank"
         rel="noopener noreferrer"
         href="https://policies.google.com/privacy"
      >
        Privacy Policy
      </a>
      and
      <a class="underline"
         target="_blank"
         rel="noopener noreferrer"
         href="https://policies.google.com/terms"
      >
        Terms of Service
      </a>
      apply.
    </p>
    <p class="pt-2 font-bold">
      paulogoncalves.dev © 2021 - 2026
    </p>
  </div>
</footer>
<div class="fixed overflow-hidden z-10 dark:bg-zinc-900/60 bg-white/40 inset-0 transform ease-in-out duration-700 opacity-0 hidden transition-transform"
     aria-hidden="false"
>
</div>
`;
